Fixed spacing of deselect button

--- a/main/static/css/artly-css.css
+++ b/main/static/css/artly-css.css
@@ -83,7 +83,7 @@
 
 #denzel-space {
 	float: left;
-	width: 25px;
+	width: 38px;
 	height: 30px;
 }
 
@@ -204,7 +204,7 @@ table th {
 
 #counts-space {
 	float: left;
-	width: 70px;
+	width: 60px;
 	height: 30px;
 }
 
